index.md hates me!

--- a/404.md
+++ b/404.md
@@ -3,7 +3,8 @@ permalink: /404.html
 ---
 
 
-# owned!
+# something went wrong
 
+![](https://256.sh/i/u8hw.jpg)
 
 ## this website doesn't have pages!
