--- a/404.md
+++ b/404.md
@@ -5,6 +5,6 @@ permalink: /404.html
 
 # something went wrong
 
-![](https://256.sh/i/u8hw.jpg)
+![](./assets/img/cheebs.jpg)
 
 ## this website doesn't have pages!
