--- a/404.md
+++ b/404.md
@@ -7,4 +7,6 @@ permalink: /404.html
 
 ![](./assets/img/cheebs.jpg)
 
-## this website doesn't have pages!
+## lil wayne cheesehead feels bad for U
+
+### owo pray @website visitor
