break everything for fun and profit

--- a/404.md
+++ b/404.md
@@ -5,6 +5,8 @@ permalink: /404.html
 
 # something went wrong
 
+## (u got 404'd 😔)
+
 ![](./assets/img/cheebs.jpg)
 
 ## lil wayne cheesehead feels bad for U
