--- a/_posts/2020-10-01.md
+++ b/_posts/2020-10-01.md
@@ -12,3 +12,5 @@ author: me
 _arent these both italicised??_
 
 **@7te** 
+
+again, that depends on your threat model. if it's an APT, absolutely nothing. if you're just looking to browse the tor wiki, 
