--- a/_posts/2020-10-01.md
+++ b/_posts/2020-10-01.md
@@ -1,9 +1,8 @@
 ---
 layout: post
-permalink: /how-to-rob
-author: me
+title: "how to rob"
 date: 2020-10-01 12:00:00 -0000
-categories: test blog
+categories: posts
 ---
 
 # 50 cent is one of the smartest men alive
