remove old test pages, change default layout

--- a/404.md
+++ b/404.md
@@ -1,11 +1,12 @@
 ---
 permalink: /404.html
+layout: root
 ---
 
 
 # something went wrong
 
-## (u got 404'd 😔)
+# (u got 404'd 😔)
 
 ![](./assets/img/cheebs.jpg)
 
