change blog posts, add newtab.html

--- a/_posts/2020-10-01-how-to-rob.md
+++ b/_posts/2020-10-01-how-to-rob.md
@@ -7,7 +7,7 @@ categories: posts
 
 # 50 cent is one of the smartest men alive
 
-###### and i refuse to hear otherwise from anyone
+# and i refuse to hear otherwise from anyone
 
 *testing 123wowowowoow how does this look*
 _arent these both italicised??_
