change every layout and permalinks for most webpages!

--- a/404.md
+++ b/404.md
@@ -1,6 +1,6 @@
 ---
 permalink: /404.html
-layout: root
+layout: default
 ---
 
 
@@ -12,4 +12,3 @@ layout: root
 
 ## lil wayne cheesehead feels bad for U
 
-### owo pray @website visitor
