change xml feed

--- a/_drafts/2020-10-01-how-to-rob.md
+++ b/_drafts/2020-10-01-how-to-rob.md
@@ -3,6 +3,7 @@ layout: post
 title: "how to rob"
 date: 2020-10-01 12:00:00 -0000
 categories: posts
+author: 7te
 ---
 
 # 50 cent is one of the smartest men alive
